force-app/main/default/objects/Account/fields/Appfolio_ID__c.field-meta.xml
<CustomField>
    <fullName>Appfolio_ID__c</fullName>
    <description>Unique identifier for this investing entity Account in AppFolio, used to match/sync records between Salesforce and AppFolio.</description>
    <externalId>true</externalId>
    <inlineHelpText>Do not edit directly. Populated by the AppFolio integration.</inlineHelpText>
    <label>Appfolio ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>