force-app/main/default/objects/Account/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <description>The legal entity type of this investing entity Account (individual, corporation, trust, etc.), used to drive tax treatment, K-1 preparation, and onboarding document requirements.</description>
    <inlineHelpText>Select the legal structure of this investing entity.</inlineHelpText>
    <label>Entity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Estate or Trust</fullName>
            </value>
            <value>
                <fullName>Partnership or LLC</fullName>
            </value>
            <value>
                <fullName>Exempt Organization</fullName>
            </value>
            <value>
                <fullName>IRA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>