force-app/main/default/objects/Account/fields/Tax_Address__c.field-meta.xml
<CustomField>
    <fullName>Tax_Address__c</fullName>
    <description>The mailing address of record used for this investing entity's tax filings (e.g. K-1 mailing address), which may differ from the Account's standard Billing or Shipping Address.</description>
    <inlineHelpText>Enter the address tax documents (e.g. K-1) should be mailed to.</inlineHelpText>
    <label>Tax Address</label>
    <type>Address</type>
</CustomField>