force-app/main/default/objects/Account/recordTypes/Broker_Firm.recordType-meta.xml
<RecordType>
    <!--
        THE BROKER FIRM ACCOUNT. Every Account that existed before 2026-08-10 is this type.

        THIS IS THE ACTUAL SHARING BOUNDARY FOR BOTH ACCOUNT AND CONTACT. Contact sharing is
        ControlledByParent, so this record type - not Contact's own - is what a sharing rule
        keys on. It is shared to Acquisitions, Transactions AND Property Management, all three
        of which consume broker Contacts through Broker_Assignment__c.Broker__c,
        Lease_Inquiry__c.Broker__c and Opportunity.Broker__c. The split this feature draws is
        "everyone except IR", not a two-way Acquisitions-vs-IR split - do not scope a future
        sharing rule to Acquisitions alone or Transactions/PM lose broker visibility.

        MEASURED ORG FACT (2026-08-10): Contact.object-meta.xml currently declares
        sharingModel = ControlledByParent, but the org's LIVE Contact OWD is actually
        ReadWrite, not ControlledByParent - a later task in this plan corrects that mismatch.
        Until it does, this record type's role as "the actual sharing boundary" is the TARGET
        state this feature is building toward, not yet the enforced state. MEASURED, not
        assumed: queried via the Tooling API
        (`SELECT InternalSharingModel FROM EntityDefinition WHERE DeveloperName = 'Contact'`)
        on 2026-08-10, Task 0 of this plan - result ReadWrite.

        ⚠ FIX 2026-08-10 (code review, CRITICAL) - EVERY PICKLIST ON THE OBJECT IS ENUMERATED
        BELOW - Type, BillingGeocodeAccuracy, ShippingGeocodeAccuracy, Industry, Ownership and
        AccountSource - because a record type file that omits a picklist silently drops ALL of
        that picklist's values from that type. This is the same rule already enforced under
        NDA__c, Contract_Review__c, Disposition__c and LOI__c; the original brief that produced
        this file omitted it, which was a plan defect, not a deliberate narrowing. The full
        value set was pulled from a LIVE ORG DESCRIBE (`sf sobject describe, sobject=Account`),
        never from this repo's field files, because `sf project retrieve` unions local and
        remote picklist values and a repo field file can list values the org no longer has. Note
        that standard Account.Type already carries a value literally named 'Broker Firm' -
        coincidental overlap with this record type's own label, not a dependency; nothing here
        reads or writes Account.Type. Both Account record types (this one and Investor_Entity)
        carry the IDENTICAL, COMPLETE value set - the org has no default on any of these six
        picklists, so no <default>true</default> appears anywhere in this file. Narrowing either
        record type's values is a separate, deliberate change for later, and this fix is
        deliberately behaviour-neutral for every existing Account.
    -->
    <fullName>Broker_Firm</fullName>
    <active>true</active>
    <description>Broker firm account. The real sharing boundary for both Account and Contact - shared to Acquisitions, Transactions and PM. See the XML comment in this file.</description>
    <label>Broker Firm</label>
</RecordType>