force-app/main/default/objects/Account/recordTypes/Investor_Entity.recordType-meta.xml
<RecordType>
    <!--
        THE INVESTOR ENTITY ACCOUNT. Net new as of 2026-08-10 - no existing Account carries
        this type.

        THE IR BOUNDARY. Assumes investors are modelled as ENTITIES (LLCs, trusts, funds), each
        with its own Account - see the spec section 3 switch point if that assumption turns out
        to be wrong for how IR actually onboards investors. As with Broker_Firm, this record
        type - not Contact's own - is the real sharing key, because Contact sharing is
        ControlledByParent.

        MEASURED ORG FACT (2026-08-10): Contact.object-meta.xml currently declares
        sharingModel = ControlledByParent, but the org's LIVE Contact OWD is actually
        ReadWrite, not ControlledByParent - a later task in this plan corrects that mismatch.
        Until it does, this record type's role as the IR sharing boundary is the TARGET state
        this feature is building toward, not yet the enforced state. MEASURED, not assumed:
        queried via the Tooling API
        (`SELECT InternalSharingModel FROM EntityDefinition WHERE DeveloperName = 'Contact'`)
        on 2026-08-10, Task 0 of this plan - result ReadWrite.

        ⚠ FIX 2026-08-10 (code review, CRITICAL) - EVERY PICKLIST ON THE OBJECT IS ENUMERATED
        BELOW - Type, BillingGeocodeAccuracy, ShippingGeocodeAccuracy, Industry, Ownership and
        AccountSource - because a record type file that omits a picklist silently drops ALL of
        that picklist's values from that type. This is the same rule already enforced under
        NDA__c, Contract_Review__c, Disposition__c and LOI__c; the original brief that produced
        this file omitted it, which was a plan defect, not a deliberate narrowing. The full
        value set was pulled from a LIVE ORG DESCRIBE (`sf sobject describe, sobject=Account`),
        never from this repo's field files, because `sf project retrieve` unions local and
        remote picklist values and a repo field file can list values the org no longer has. Note
        that standard Account.Type already carries a value literally named 'Investor' -
        coincidental overlap with this record type's own concept, not a dependency; nothing here
        reads or writes Account.Type. Both Account record types (this one and Broker_Firm) carry
        the IDENTICAL, COMPLETE value set - the org has no default on any of these six
        picklists, so no <default>true</default> appears anywhere in this file. This type
        carries no existing rows today, so "behaviour-neutral" here means it is created with the
        full value set available from day one, matching its sibling. Narrowing either record
        type's values is a separate, deliberate change for later.

        ⚠ FIX ROUND 3 (2026-08-10, iterative check-only dry-runs against usman-dpeg, root-caused
        by bisection on Contact/recordTypes/Broker.recordType-meta.xml) - BillingGeocodeAccuracy
        AND ShippingGeocodeAccuracy REMOVED. Both failed with a GENERIC "An unexpected error
        occurred... ErrorId..." rather than a clean field-level message. Root cause, confirmed by
        bisection on the Contact sibling case (identical shape, cheaper to isolate there): both
        are COMPOUND-FIELD SUB-COMPONENTS - `compoundFieldName` in the live describe reads
        `BillingAddress` for BillingGeocodeAccuracy and `ShippingAddress` for
        ShippingGeocodeAccuracy - and every field that failed had this set while every field that
        passed did not. RecordType.picklistValues cannot restrict a compound field's
        sub-picklist; the platform does not report this as a clean validation error, it throws
        generically instead. THE RULE FOR ALL FUTURE TASKS IN THIS PLAN: a picklist that is a
        compound-field sub-component must NEVER be enumerated in a RecordType's picklistValues -
        check `compoundFieldName` in the describe, not just `type`, before adding any field to
        this file. The remaining FOUR picklists below (AccountSource, Industry, Ownership, Type)
        were each dry-run-validated (via the sibling Broker_Firm.recordType-meta.xml, identical
        value set) and remain enumerated identically on both Account record types.
    -->
    <fullName>Investor_Entity</fullName>
    <active>true</active>
    <description>Investor entity account. The IR sharing boundary - assumes investors are modelled as entities. See the XML comment in this file.</description>
    <label>Investor Entity</label>
</RecordType>