force-app/main/default/objects/Account/validationRules/Record_Type_Is_Immutable.validationRule-meta.xml
<ValidationRule>
    <!--
        THIS NOTE LIVES IN A COMMENT, NOT IN <description>. See the sibling Contact rule for the
        reason - description is capped at 255 characters and the comment must be inside the root.

        AN ACCOUNT'S RECORD TYPE IS THE SHARING BOUNDARY FOR ITSELF AND EVERY CONTACT UNDER IT.
        Changing it does not move one record, it moves the whole subtree across the team
        boundary, silently and with no per-Contact audit trail. There is no legitimate
        end-user workflow that does this: a misfiled Account is an admin correction, made
        deliberately, not a mid-workflow edit.

        ADMINS ARE OUT OF SCOPE BY DESIGN (spec section 5) - a user with Modify All Data is
        already outside this boundary everywhere else in the org, so the rule does not attempt
        to stop them; $Permission is deliberately not consulted. If an exemption is ever needed,
        add a custom permission and gate on $Permission - never widen the rule itself.
    -->
    <fullName>Record_Type_Is_Immutable</fullName>
    <active>true</active>
    <description>An account's record type cannot be changed - it is the sharing boundary for the account and every contact under it. See the XML comment in this file.</description>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISCHANGED(RecordTypeId)
)</errorConditionFormula>
    <errorMessage>An account's record type cannot be changed. It controls which team can see this account and all of its contacts. Contact a system administrator if this account is filed under the wrong team.</errorMessage>
</ValidationRule>